--- a/public/css/front/_main.scss
+++ b/public/css/front/_main.scss
@@ -1,9 +1,28 @@
+html{
+    font-size: 16px;
+    line-height: 16px;
+    @include xl(){
+        font-size: 14px;
+        line-height: 14px;
+    }
+    @include md(){
+        font-size: 11px;
+        line-height: 11px;
+    }
+}
+
+
+
 body {
     margin: 0;
     padding: 0;
-    font-size: 16px;
-    line-height: 16px;
+    // font-size: 16px;
+    // line-height: 16px;
     // background-image: linear-gradient(#feff98, #ffff55);
+    // @include md(){
+    //     font-size: 10px;
+    //     line-height: 10px;
+    // }
 }
 
 .overlay {
@@ -15,6 +34,15 @@ body {
     background-color: rgba(0, 0, 0, 0.35);
     z-index: 999;
     pointer-events: none; /* 允許下面元素接收點擊事件 */
+}
+.black-screen {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.661);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
 }
 .allBg {
     position: fixed;
@@ -28,17 +56,20 @@ body {
 
 .wrap {
     width: 100%;
+    // width: 100vw;
     margin: 0 auto;
     max-width: 1920px;
     max-height: 950px;
 }
 
 .container {
+    background-color: #ffffff71;
     position: relative;
+    // width: 100vw;
     width: 100%;
     height: 100vh;
     // height: 100%;
-    overflow: auto;
+    // overflow: auto;
 
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
@@ -47,7 +78,9 @@ body {
     position: relative;
 
     width: 100%;
-    height: 100vh;
+    // width: 100vw;
+    // height: 100vh;
+    height: 950px;
     background-size: cover;
 
     scroll-snap-align: center;
@@ -127,5 +160,5 @@ body {
 .footer {
     background-color: #000;
     height: 100px;
-    width: 100vw;
+    width: 100%;
 }
