--- a/public/css/front/_sec02.scss
+++ b/public/css/front/_sec02.scss
@@ -6,15 +6,21 @@
         z-index: 1;
         width: 100%;
         height: 80%;
-        border: 1px solid red;
+        // border: 5px solid red;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
+        @include xxs(){
+            justify-content: flex-start;
+        }
         .sec2_box1 {
             width: 50%;
             height: 20%;
-            background-color: rgba(116, 146, 136, 0.549);
+            // background-color: rgba(116, 146, 136, 0.549);
+            @include md() {
+                width: 90%;
+            }
             img {
                 position: relative;
                 display: inline-block;
@@ -24,40 +30,71 @@
             }
         }
         .sec2_box2 {
-            width: 45%;
+            width: 40%;
             height: 77%;
-            background-color: rgba(83, 106, 98, 0.549);
+            // background-color: rgba(83, 106, 98, 0.549);
             background: url(/img/front/sec2_box2Bg.png);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            @include xxl() {
+                width: 60%;
+            }
+            @include md() {
+                width: 90%;
+            }
+            @include xxs() {
+                height: 62%;
+            }
             .sec2_box3 {
                 // width: 100%;
                 height: 23%;
-                background-color: rgba(116, 146, 136, 0.549);
+                // background-color: rgba(116, 146, 136, 0.549);
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 .numberbox {
+                    height: 50%;
                     display: flex;
                     justify-content: center;
                     margin: 1.5rem 0 1rem 0;
-                    background-color: #717171;
+                    // background-color: #717171;
                     .select {
                         width: 175px;
                         height: 45px;
                         border: 1px solid #717171;
-                        border-radius: .5rem;
+                        border-radius: 0.5rem;
                         font-size: 1.4rem;
-                        margin-right: .5rem;
+                        margin-right: 0.5rem;
+                        @include xs() {
+                            width: 120px;
+                        }
+                        @include xxs() {
+                            width: 100px;
+                        }
+                        @include x4s() {
+                            // width: 80px;
+                        }
                     }
                     .inputbox {
                         input {
                             width: 300px;
                             height: 41px;
                             border: 1px solid #717171;
-                            border-radius: .5rem;
+                            border-radius: 0.5rem;
                             font-size: 1.4rem;
+                            @include xs() {
+                                width: 200px;
+                            }
+                            @include xxs() {
+                                width: 190px;
+                            }
+                            @include x4s() {
+                                width: 150px;
+                            }
                         }
                     }
                     option {
@@ -65,12 +102,13 @@
                     }
                 }
                 .checkbox {
+                    height: 50%;
                     font-size: 1.3rem;
-                    input{
+                    input {
                         width: 1.4rem;
                         height: 1.4rem;
                         vertical-align: middle;
-                        margin: 0  .3rem  .25rem  0;
+                        margin: 0 0.3rem 0.25rem 0;
                     }
                     a {
                         margin: 0 0 0 0.5rem;
@@ -85,10 +123,21 @@
             }
             .sec2_box4 {
                 height: 33%;
-                background-color: rgba(83, 106, 98, 0.549);
+                width: 68%;
+                // background-color: rgba(255, 255, 255, 0.549);
+                margin: 0 0 1rem;
                 display: flex;
                 justify-content: center;
-                margin: 0 0 1rem;
+                align-items: center;
+                @include xl(){
+                    width: 80%;
+                }
+                @include lmd(){
+                    width: 90%;
+                }
+                @include md(){
+                    width: 100%;
+                }
                 img {
                     position: relative;
                     display: inline-block;
@@ -97,12 +146,11 @@
                     object-fit: contain;
                 }
                 .slippersBox {
-                    background-color: rgb(255, 162, 162);
-                    height: 100%;
-                    width: 30%;
+                    // background-color: rgb(255, 162, 162);
+                    height: 95%;
+                    width: 40%;
                 }
                 .textBox {
-                    background-color: #fff;
                     max-width: 18rem;
                     line-height: 1.5rem;
                     .slipperTitle {
@@ -119,11 +167,15 @@
                 }
             }
             .sec2_box5 {
-                // width: 100%;
+                width: 100%;
                 height: 40%;
-                background-color: rgba(116, 146, 136, 0.549);
+                // background-color: rgba(116, 146, 136, 0.549);
                 display: flex;
                 justify-content: center;
+                @include md (){
+                    // width: 80%;
+                    height: 30%;
+                }
                 img {
                     position: relative;
                     display: inline-block;
