--- a/public/css/front/_sec04.scss
+++ b/public/css/front/_sec04.scss
@@ -11,10 +11,16 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        @include md(){
+            height: 70%;
+        }
         .sec4_box1 {
             width: 50%;
             height: 20%;
             background-color: rgba(116, 146, 136, 0.549);
+            @include md(){
+                width: 90%;
+            }
             img {
                 position: relative;
                 display: inline-block;
@@ -30,15 +36,33 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            @include md(){
+                width: 80%;
+                flex-direction: row;
+            }
+            @include sm(){
+                width: 90%;
+            }
             .sec4_box3 {
                 height: 85%;
                 width: 100%;
                 background-color: rgba(116, 146, 136, 0.549);
                 display: flex;
                 flex-direction: row;
-                .imgBox{
-                    width: 70%;
+                @include md(){
+                    flex-direction: column;
+                    width: 90%;
+                }
+                @include xs(){
+                    width: 85%;
+                }
+                .imgBox {
+                    width: 60%;
                     height: 100%;
+                    @include md(){
+                        height: 70%;
+                        width: 90%;
+                    }
                     img {
                         position: relative;
                         display: inline-block;
@@ -47,41 +71,74 @@
                         object-fit: contain;
                     }
                 }
-                .textBox{
-                    .text1_box{
-                        border: red 1px solid;
-                        height: 50%;
+                .textBox {
+                    width: 40%;
+                    height: 100%;
+                    @include md(){
+                        height: 30%;
                         width: 100%;
-                        .title{
+                    }
+                    .text1_box {
+                        border: red 1px solid;
+                        height: 60%;
+                        width: 100%;
+                        @include md(){
+                            height: 100%;
+                        }
+                        .title {
                             border: blue 1px solid;
                             background: url(/img/front/sec4_t1bg.png);
                             background-repeat: no-repeat;
-                            background-size: contain;
+                            background-size: cover;
                             background-position: left;
                             position: relative;
-                            display: inline-block;
+                            // display: inline-block;
                             height: 30%;
                             width: 100%;
                             max-width: 167px;
                             max-height: 75px;
+                            font-size: 2.5rem;
+                            font-weight: 600;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            @include md(){
+                                height: 100%;
+                            }
+                        }
+                        p {
+                            font-size: 1.7rem;
+                            line-height: 2.7rem;
                         }
                     }
-                    .text2_box{
+                    .text2_box {
                         border: red 1px solid;
-                        height: 50%;
+                        height: 40%;
                         width: 100%;
-                        .title{
+                        @include md(){
+                            display: none;
+                        }
+                        .title {
                             border: blue 1px solid;
                             background: url(/img/front/sec4_t2bg.png);
                             background-repeat: no-repeat;
-                            background-size: contain;
+                            background-size: cover;
                             background-position: left;
                             position: relative;
-                            display: inline-block;
-                            height: 20%;
+                            // display: inline-block;
+                            height: 25%;
                             width: 100%;
-                            max-width: 223px;
+                            max-width: 176px;
                             max-height: 64px;
+                            font-size: 1.8rem;
+                            font-weight: 600;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                        }
+                        p {
+                            font-size: 1.8rem;
+                            line-height: 2.7rem;
                         }
                     }
                 }
@@ -93,6 +150,16 @@
                 display: flex;
                 justify-content: space-between;
                 flex-direction: row;
+                @include md(){
+                    top: 0%;
+                    width: 10%;
+                    height:85%;
+                    flex-direction: column;
+                }
+                @include xs(){
+                    justify-content: space-evenly;
+                    width: 15%;
+                }
                 img {
                     position: relative;
                     display: inline-block;
