--- a/public/css/front/style.css
+++ b/public/css/front/style.css
@@ -267,27 +267,164 @@ textarea {
   border: #feff98 1px solid;
 }
 
+.popup {
+  display: none;
+  z-index: 3;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100vw;
+  height: 100vh;
+  background-image: linear-gradient(135deg, rgba(250, 255, 231, 0.9215686275) 0%, #eaffd6 100%);
+  padding: 60px;
+  letter-spacing: 3px;
+  text-align: center;
+}
+.popup .popBox {
+  width: 90vw;
+  max-width: 1700px;
+  height: 70vh;
+  padding: 0 0 30px;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+.popup .popBox .info {
+  text-align: center;
+  line-height: 35px;
+  font-size: 1.3rem;
+  font-weight: 800;
+}
+.popup .popBox .info .text,
+.popup .popBox .info .title {
+  color: #2c0900;
+  margin-bottom: 20px;
+}
+.popup .popBox .info img {
+  max-width: 90%;
+  max-height: 90%;
+  width: auto;
+  height: auto;
+}
+.popup .popBox .info .title {
+  font-size: 2.5rem;
+}
+.popup .popBox .info .text {
+  text-align: left;
+  display: flex;
+  justify-content: center;
+}
+.popup .popBox .info .text ul li {
+  color: #2c0900;
+  list-style-type: decimal;
+  list-style-position: inside;
+}
+.popup .xBtn {
+  font-size: 2rem;
+  color: #2c0900;
+  position: fixed;
+  top: 72px;
+  right: 24px;
+  cursor: pointer;
+}
+
 .slideBarL {
+  opacity: 1;
   position: fixed;
   bottom: 50%;
-  left: 0px;
+  left: 2%;
   transform: translate(0%, 50%);
-  background-color: rgba(255, 211, 211, 0.5);
-  width: 10%;
-  height: 20%;
-  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
 }
 @media all and (max-width: 900px) {
   .slideBarL {
     display: none;
   }
 }
-.slideBarL ul {
-  line-height: 40px;
+.slideBarL .button {
+  position: absolute;
+  width: 6%;
+  height: 10%;
+  top: 45%;
+  left: 10%;
 }
-.slideBarL ul li {
-  font-size: 22px;
+.slideBarL .button .triangle {
+  width: 100%;
+  height: 100%;
+  background: #94c700;
+  -webkit-clip-path: polygon(100% 0, 0 50%, 100% 100%);
+          clip-path: polygon(100% 0, 0 50%, 100% 100%);
+}
+.slideBarL .menu {
+  width: 100%;
+}
+.slideBarL .menu .menu_list {
+  line-height: 1.7rem;
+  text-align: left;
+  width: 100%;
+  padding-left: 0;
+}
+.slideBarL .menu_list_item {
+  padding-bottom: 20px;
+  position: relative;
+  list-style: none;
+  top: 0px;
+  opacity: 0;
+}
+.slideBarL .menu_list_item a {
   color: #94c700;
+  text-decoration: none;
+  text-align: left;
+  font-size: 1.4rem;
+  font-weight: 600;
+  display: inline-block;
+  width: 100%;
+}
+@media all and (max-width: 1775px) {
+  .slideBarL .menu_list_item a {
+    font-size: 1.2rem;
+    width: 70%;
+  }
+}
+@keyframes left {
+  0% {
+    left: 0px;
+    opacity: 0;
+  }
+  70% {
+    opacity: 1;
+    left: 50px;
+    animation-timing-function: ease-out;
+  }
+  100% {
+    opacity: 1;
+    left: 50px;
+    animation-timing-function: ease-out;
+  }
+}
+.slideBarL .menu_list--animate .menu_list_item {
+  animation: left 0.9s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+.slideBarL .menu_list--animate .menu_list_item:nth-child(2) {
+  animation-delay: 0.5s;
+}
+.slideBarL .menu_list--animate .menu_list_item:nth-child(3) {
+  animation-delay: 1s;
+}
+.slideBarL .menu_list--animate .menu_list_item:nth-child(4) {
+  animation-delay: 1.5s;
+}
+
+.appear {
+  opacity: 1;
 }
 
 .slideBarR {
@@ -298,7 +435,7 @@ textarea {
   background-color: rgba(255, 211, 211, 0.5);
   width: 10%;
   height: 65%;
-  z-index: 10;
+  z-index: 2;
 }
 @media all and (max-width: 900px) {
   .slideBarR {
@@ -331,6 +468,16 @@ textarea {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+}
+@media all and (max-width: 1440px) {
+  .slideBarR .bg .btnBox {
+    height: 22%;
+  }
+}
+@media all and (max-width: 960px) {
+  .slideBarR .bg .btnBox {
+    height: 18%;
+  }
 }
 .slideBarR .bg .fb {
   background: url(/img/front/fb.png);
@@ -374,10 +521,10 @@ textarea {
   bottom: 0px;
   right: 0px;
   transform: translate(0%, 0%);
-  background-color: rgba(255, 211, 211, 0.5);
+  background-color: #ffb72a;
   width: 100%;
-  height: 10%;
-  z-index: 10;
+  height: 11%;
+  z-index: 2;
 }
 @media all and (max-width: 900px) {
   .slideBarDown {
@@ -388,7 +535,7 @@ textarea {
   background: url(/img/front/slideBarDown.png);
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: center;
+  background-position: left;
   position: relative;
   height: 100%;
   width: 100%;
@@ -396,16 +543,24 @@ textarea {
   max-height: 207px;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
-  justify-content: center;
+  padding: 0 0 5px 0;
 }
 .slideBarDown .bg .btnBox {
   height: 100%;
   width: 100%;
-  max-width: 408px;
+  max-width: 365px;
   max-height: 46px;
   display: flex;
   flex-direction: row;
+}
+.slideBarDown .bg .empty {
+  height: 100%;
+  width: 30%;
+  max-width: 100px;
+  max-height: 94px;
+  border: 1px solid red;
 }
 .slideBarDown .bg .google {
   background: url(/img/front/google.png);
@@ -421,9 +576,10 @@ textarea {
   position: relative;
   display: inline-block;
   height: 100%;
-  width: 90%;
+  width: 40%;
   max-width: 202px;
   max-height: 59px;
+  border: 1px solid red;
 }
 .slideBarDown .bg .fb {
   background: url(/img/front/fbM.png);
@@ -431,7 +587,8 @@ textarea {
 .slideBarDown .bg .top {
   background: url(/img/front/topM.png);
 }
-.slideBarDown .bg .top, .slideBarDown .bg .fb {
+.slideBarDown .bg .top,
+.slideBarDown .bg .fb {
   border: 1px solid red;
   background-repeat: no-repeat;
   background-size: contain;
@@ -439,16 +596,31 @@ textarea {
   position: relative;
   display: inline-block;
   height: 100%;
-  width: 100%;
+  width: 15%;
   max-width: 94px;
   max-height: 94px;
+}
+
+html {
+  font-size: 16px;
+  line-height: 16px;
+}
+@media all and (max-width: 1440px) {
+  html {
+    font-size: 14px;
+    line-height: 14px;
+  }
+}
+@media all and (max-width: 900px) {
+  html {
+    font-size: 11px;
+    line-height: 11px;
+  }
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-size: 16px;
-  line-height: 16px;
 }
 
 .overlay {
@@ -460,6 +632,16 @@ body {
   background-color: rgba(0, 0, 0, 0.35);
   z-index: 999;
   pointer-events: none; /* 允許下面元素接收點擊事件 */
+}
+
+.black-screen {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.661);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
 }
 
 .allBg {
@@ -480,10 +662,10 @@ body {
 }
 
 .container {
+  background-color: rgba(255, 255, 255, 0.4431372549);
   position: relative;
   width: 100%;
   height: 100vh;
-  overflow: auto;
   scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
 }
@@ -491,7 +673,7 @@ body {
 .section {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 950px;
   background-size: cover;
   scroll-snap-align: center;
 }
@@ -578,7 +760,7 @@ body {
 .footer {
   background-color: #000;
   height: 100px;
-  width: 100vw;
+  width: 100%;
 }
 
 .LOGO {
@@ -764,16 +946,24 @@ body {
   z-index: 1;
   width: 100%;
   height: 80%;
-  border: 1px solid red;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
+@media all and (max-width: 375px) {
+  .section2 .sec_box {
+    justify-content: flex-start;
+  }
+}
 .section2 .sec_box .sec2_box1 {
   width: 50%;
   height: 20%;
-  background-color: rgba(116, 146, 136, 0.549);
+}
+@media all and (max-width: 900px) {
+  .section2 .sec_box .sec2_box1 {
+    width: 90%;
+  }
 }
 .section2 .sec_box .sec2_box1 img {
   position: relative;
@@ -784,26 +974,42 @@ body {
      object-fit: contain;
 }
 .section2 .sec_box .sec2_box2 {
-  width: 45%;
+  width: 40%;
   height: 77%;
-  background-color: rgba(83, 106, 98, 0.549);
   background: url(/img/front/sec2_box2Bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media all and (max-width: 1775px) {
+  .section2 .sec_box .sec2_box2 {
+    width: 60%;
+  }
+}
+@media all and (max-width: 900px) {
+  .section2 .sec_box .sec2_box2 {
+    width: 90%;
+  }
+}
+@media all and (max-width: 375px) {
+  .section2 .sec_box .sec2_box2 {
+    height: 62%;
+  }
 }
 .section2 .sec_box .sec2_box2 .sec2_box3 {
   height: 23%;
-  background-color: rgba(116, 146, 136, 0.549);
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .section2 .sec_box .sec2_box2 .sec2_box3 .numberbox {
+  height: 50%;
   display: flex;
   justify-content: center;
   margin: 1.5rem 0 1rem 0;
-  background-color: #717171;
 }
 .section2 .sec_box .sec2_box2 .sec2_box3 .numberbox .select {
   width: 175px;
@@ -813,6 +1019,16 @@ body {
   font-size: 1.4rem;
   margin-right: 0.5rem;
 }
+@media all and (max-width: 500px) {
+  .section2 .sec_box .sec2_box2 .sec2_box3 .numberbox .select {
+    width: 120px;
+  }
+}
+@media all and (max-width: 375px) {
+  .section2 .sec_box .sec2_box2 .sec2_box3 .numberbox .select {
+    width: 100px;
+  }
+}
 .section2 .sec_box .sec2_box2 .sec2_box3 .numberbox .inputbox input {
   width: 300px;
   height: 41px;
@@ -820,10 +1036,26 @@ body {
   border-radius: 0.5rem;
   font-size: 1.4rem;
 }
+@media all and (max-width: 500px) {
+  .section2 .sec_box .sec2_box2 .sec2_box3 .numberbox .inputbox input {
+    width: 200px;
+  }
+}
+@media all and (max-width: 375px) {
+  .section2 .sec_box .sec2_box2 .sec2_box3 .numberbox .inputbox input {
+    width: 190px;
+  }
+}
+@media all and (max-width: 320px) {
+  .section2 .sec_box .sec2_box2 .sec2_box3 .numberbox .inputbox input {
+    width: 150px;
+  }
+}
 .section2 .sec_box .sec2_box2 .sec2_box3 .numberbox option {
   font-size: 1.3rem;
 }
 .section2 .sec_box .sec2_box2 .sec2_box3 .checkbox {
+  height: 50%;
   font-size: 1.3rem;
 }
 .section2 .sec_box .sec2_box2 .sec2_box3 .checkbox input {
@@ -843,10 +1075,26 @@ body {
 }
 .section2 .sec_box .sec2_box2 .sec2_box4 {
   height: 33%;
-  background-color: rgba(83, 106, 98, 0.549);
+  width: 68%;
+  margin: 0 0 1rem;
   display: flex;
   justify-content: center;
-  margin: 0 0 1rem;
+  align-items: center;
+}
+@media all and (max-width: 1440px) {
+  .section2 .sec_box .sec2_box2 .sec2_box4 {
+    width: 80%;
+  }
+}
+@media all and (max-width: 960px) {
+  .section2 .sec_box .sec2_box2 .sec2_box4 {
+    width: 90%;
+  }
+}
+@media all and (max-width: 900px) {
+  .section2 .sec_box .sec2_box2 .sec2_box4 {
+    width: 100%;
+  }
 }
 .section2 .sec_box .sec2_box2 .sec2_box4 img {
   position: relative;
@@ -857,12 +1105,10 @@ body {
      object-fit: contain;
 }
 .section2 .sec_box .sec2_box2 .sec2_box4 .slippersBox {
-  background-color: rgb(255, 162, 162);
-  height: 100%;
-  width: 30%;
+  height: 95%;
+  width: 40%;
 }
 .section2 .sec_box .sec2_box2 .sec2_box4 .textBox {
-  background-color: #fff;
   max-width: 18rem;
   line-height: 1.5rem;
 }
@@ -878,10 +1124,15 @@ body {
   color: #1b63ff;
 }
 .section2 .sec_box .sec2_box2 .sec2_box5 {
+  width: 100%;
   height: 40%;
-  background-color: rgba(116, 146, 136, 0.549);
   display: flex;
   justify-content: center;
+}
+@media all and (max-width: 900px) {
+  .section2 .sec_box .sec2_box2 .sec2_box5 {
+    height: 30%;
+  }
 }
 .section2 .sec_box .sec2_box2 .sec2_box5 img {
   position: relative;
@@ -951,23 +1202,34 @@ body {
   display: flex;
   justify-content: space-between;
 }
+@media all and (max-width: 1440px) {
+  .section3 .sec_box .sec3_box2 {
+    height: 60%;
+  }
+}
 .section3 .sec_box .sec3_box2 .activity_t {
   margin: 12px;
   display: flex;
   align-items: center;
 }
 .section3 .sec_box .sec3_box2 .activity_t .title {
-  font-size: 1.8rem;
+  font-size: 1.8em;
   font-weight: 600;
   background-color: #ff3b67;
   border-radius: 30px;
   padding: 16px 20px;
   color: #fff;
   margin-right: 10px;
+  white-space: nowrap;
 }
 .section3 .sec_box .sec3_box2 .activity_t .text {
   font-size: 1.4rem;
   line-height: 1.6rem;
+}
+@media all and (max-width: 1440px) {
+  .section3 .sec_box .sec3_box2 .activity_t .text {
+    width: 70%;
+  }
 }
 .section3 .sec_box .sec3_box2 .sec3_boxL {
   width: 49.5%;
@@ -1044,10 +1306,12 @@ body {
   text-align: center;
   position: relative;
   overflow: hidden;
+  margin: 15px 0;
 }
 .section3 .sec_box .sec3_box2 .sec3_boxR .line p {
   position: absolute;
   left: 50%;
+  top: 10%;
   z-index: 2;
 }
 .section3 .sec_box .sec3_box2 .sec3_boxR .white {
@@ -1089,7 +1353,7 @@ body {
   background-color: #ff3e47;
 }
 .section3 .sec_box .sec3_box3 {
-  width: 8%;
+  width: 10%;
   height: 6%;
   background-color: rgba(94, 135, 121, 0.549);
 }
@@ -1104,6 +1368,7 @@ body {
   justify-content: center;
   font-size: 1.4rem;
   font-weight: 500;
+  white-space: nowrap;
 }
 
 .section3_boxM {
@@ -1160,6 +1425,7 @@ body {
   margin: 12px;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .section31 .sec_box .sec3_box2 .activity_t .title,
 .section32 .sec_box .sec3_box2 .activity_t .title {
@@ -1175,6 +1441,12 @@ body {
 .section32 .sec_box .sec3_box2 .activity_t .text {
   font-size: 1.4rem;
   line-height: 1.6rem;
+}
+@media all and (max-width: 375px) {
+  .section31 .sec_box .sec3_box2 .activity_t .text,
+  .section32 .sec_box .sec3_box2 .activity_t .text {
+    width: 55%;
+  }
 }
 .section31 .sec_box .sec3_box2 .sec3_boxL,
 .section32 .sec_box .sec3_box2 .sec3_boxL {
@@ -1268,11 +1540,20 @@ body {
   text-align: center;
   position: relative;
   overflow: hidden;
+  margin: 10px 0;
+}
+@media all and (max-width: 900px) {
+  .section31 .sec_box .sec3_box2 .sec3_boxR .line,
+  .section32 .sec_box .sec3_box2 .sec3_boxR .line {
+    width: 80%;
+  }
 }
 .section31 .sec_box .sec3_box2 .sec3_boxR .line p,
 .section32 .sec_box .sec3_box2 .sec3_boxR .line p {
   position: absolute;
   left: 50%;
+  top: 10%;
+  z-index: 1;
 }
 .section31 .sec_box .sec3_box2 .sec3_boxR .white,
 .section32 .sec_box .sec3_box2 .sec3_boxR .white {
@@ -1356,10 +1637,20 @@ body {
   align-items: center;
   justify-content: center;
 }
+@media all and (max-width: 900px) {
+  .section4 .sec_box {
+    height: 70%;
+  }
+}
 .section4 .sec_box .sec4_box1 {
   width: 50%;
   height: 20%;
   background-color: rgba(116, 146, 136, 0.549);
+}
+@media all and (max-width: 900px) {
+  .section4 .sec_box .sec4_box1 {
+    width: 90%;
+  }
 }
 .section4 .sec_box .sec4_box1 img {
   position: relative;
@@ -1377,6 +1668,17 @@ body {
   flex-direction: column;
   align-items: center;
 }
+@media all and (max-width: 900px) {
+  .section4 .sec_box .sec4_box2 {
+    width: 80%;
+    flex-direction: row;
+  }
+}
+@media all and (max-width: 768px) {
+  .section4 .sec_box .sec4_box2 {
+    width: 90%;
+  }
+}
 .section4 .sec_box .sec4_box2 .sec4_box3 {
   height: 85%;
   width: 100%;
@@ -1384,9 +1686,26 @@ body {
   display: flex;
   flex-direction: row;
 }
+@media all and (max-width: 900px) {
+  .section4 .sec_box .sec4_box2 .sec4_box3 {
+    flex-direction: column;
+    width: 90%;
+  }
+}
+@media all and (max-width: 500px) {
+  .section4 .sec_box .sec4_box2 .sec4_box3 {
+    width: 85%;
+  }
+}
 .section4 .sec_box .sec4_box2 .sec4_box3 .imgBox {
-  width: 70%;
+  width: 60%;
   height: 100%;
+}
+@media all and (max-width: 900px) {
+  .section4 .sec_box .sec4_box2 .sec4_box3 .imgBox {
+    height: 70%;
+    width: 90%;
+  }
 }
 .section4 .sec_box .sec4_box2 .sec4_box3 .imgBox img {
   position: relative;
@@ -1396,41 +1715,82 @@ body {
   -o-object-fit: contain;
      object-fit: contain;
 }
+.section4 .sec_box .sec4_box2 .sec4_box3 .textBox {
+  width: 40%;
+  height: 100%;
+}
+@media all and (max-width: 900px) {
+  .section4 .sec_box .sec4_box2 .sec4_box3 .textBox {
+    height: 30%;
+    width: 100%;
+  }
+}
 .section4 .sec_box .sec4_box2 .sec4_box3 .textBox .text1_box {
   border: red 1px solid;
-  height: 50%;
+  height: 60%;
   width: 100%;
+}
+@media all and (max-width: 900px) {
+  .section4 .sec_box .sec4_box2 .sec4_box3 .textBox .text1_box {
+    height: 100%;
+  }
 }
 .section4 .sec_box .sec4_box2 .sec4_box3 .textBox .text1_box .title {
   border: blue 1px solid;
   background: url(/img/front/sec4_t1bg.png);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: left;
   position: relative;
-  display: inline-block;
   height: 30%;
   width: 100%;
   max-width: 167px;
   max-height: 75px;
+  font-size: 2.5rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media all and (max-width: 900px) {
+  .section4 .sec_box .sec4_box2 .sec4_box3 .textBox .text1_box .title {
+    height: 100%;
+  }
+}
+.section4 .sec_box .sec4_box2 .sec4_box3 .textBox .text1_box p {
+  font-size: 1.7rem;
+  line-height: 2.7rem;
 }
 .section4 .sec_box .sec4_box2 .sec4_box3 .textBox .text2_box {
   border: red 1px solid;
-  height: 50%;
+  height: 40%;
   width: 100%;
+}
+@media all and (max-width: 900px) {
+  .section4 .sec_box .sec4_box2 .sec4_box3 .textBox .text2_box {
+    display: none;
+  }
 }
 .section4 .sec_box .sec4_box2 .sec4_box3 .textBox .text2_box .title {
   border: blue 1px solid;
   background: url(/img/front/sec4_t2bg.png);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: left;
   position: relative;
-  display: inline-block;
-  height: 20%;
+  height: 25%;
   width: 100%;
-  max-width: 223px;
+  max-width: 176px;
   max-height: 64px;
+  font-size: 1.8rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.section4 .sec_box .sec4_box2 .sec4_box3 .textBox .text2_box p {
+  font-size: 1.8rem;
+  line-height: 2.7rem;
 }
 .section4 .sec_box .sec4_box2 .sec4_box4 {
   height: 15%;
@@ -1439,6 +1799,20 @@ body {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
+}
+@media all and (max-width: 900px) {
+  .section4 .sec_box .sec4_box2 .sec4_box4 {
+    top: 0%;
+    width: 10%;
+    height: 85%;
+    flex-direction: column;
+  }
+}
+@media all and (max-width: 500px) {
+  .section4 .sec_box .sec4_box2 .sec4_box4 {
+    justify-content: space-evenly;
+    width: 15%;
+  }
 }
 .section4 .sec_box .sec4_box2 .sec4_box4 img {
   position: relative;
