--- a/public/css/front/_menuBar.scss
+++ b/public/css/front/_menuBar.scss
@@ -1,5 +1,5 @@
 .slideBarL {
-    opacity: 1;
+    opacity: 0;
     position: fixed;
     bottom: 50%;
     left: 2%;
@@ -17,13 +17,16 @@
         height: 10%;
         top: 45%;
         left: 10%;
-        .triangle{
+        .triangle {
             width: 100%;
             height: 100%;
             // border-radius: 50%;
             background: #94c700;
             // clip-path: polygon(0 0, 100% 50%, 0 100%);
             clip-path: polygon(100% 0, 0 50%, 100% 100%);
+        }
+        .rotate {
+            transform: rotate(180deg); /* 旋转180度 */
         }
     }
 
@@ -36,7 +39,7 @@
             padding-left: 0;
         }
     }
-    
+
     .menu_list_item {
         padding-bottom: 20px;
         position: relative;
@@ -51,7 +54,7 @@
             font-weight: 600;
             display: inline-block;
             width: 100%;
-            @include xxl(){
+            @include xxl() {
                 font-size: 1.2rem;
                 width: 70%;
             }
@@ -91,12 +94,8 @@
     }
 }
 
-.appear {
-    opacity: 1;
-}
-
-
 .slideBarR {
+    opacity: 0;
     position: fixed;
     bottom: 50%;
     right: 0px;
@@ -133,10 +132,10 @@
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
-            @include xl(){
+            @include xl() {
                 height: 22%;
             }
-            @include lmd(){
+            @include lmd() {
                 height: 18%;
             }
         }
@@ -179,12 +178,13 @@
 }
 
 .slideBarDown {
+    opacity: 0;
     display: none;
     position: fixed;
     bottom: 0px;
     right: 0px;
     transform: translate(0%, 0%);
-    background-color: #ffb72a;
+    // background-color: #ffb72a;
     width: 100%;
     height: 11%;
     z-index: 2;
@@ -195,7 +195,8 @@
         background: url(/img/front/slideBarDown.png);
         background-repeat: no-repeat;
         background-size: contain;
-        background-position: left;
+        // background-position: left;
+        background-position: center;
         position: relative;
         height: 100%;
         width: 100%;
@@ -218,13 +219,15 @@
             // background-color: green;
         }
 
-        .empty{
+        .empty {
             height: 100%;
             width: 30%;
             max-width: 100px;
             max-height: 94px;
             border: 1px solid red;
-            
+            @include xxs{
+                width: 26%;
+            }
         }
         .google {
             background: url(/img/front/google.png);
@@ -245,7 +248,6 @@
             max-width: 202px;
             max-height: 59px;
             border: 1px solid red;
-
         }
 
         .fb {
@@ -268,4 +270,119 @@
             max-height: 94px;
         }
     }
+}
+
+// 漢堡
+
+#menuToggle {
+    display: none;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+
+    z-index: 5;
+
+    -webkit-user-select: none;
+    user-select: none;
+    @include md() {
+        display: block;
+    }
+
+    a {
+        text-decoration: none;
+        color: #232323;
+
+        transition: color 0.3s ease;
+        &:hover {
+            color: tomato;
+        }
+    }
+    input {
+        display: block;
+        width: 40px;
+        height: 32px;
+        position: absolute;
+        top: -7px;
+        left: -5px;
+
+        cursor: pointer;
+
+        opacity: 0; /* hide this */
+        z-index: 2; /* and place it over the hamburger */
+
+        -webkit-touch-callout: none;
+    }
+    span {
+        display: block;
+        width: 33px;
+        height: 4px;
+        margin-bottom: 5px;
+        position: relative;
+
+        background: #452806;
+        border-radius: 3px;
+
+        z-index: 1;
+
+        transform-origin: 4px 0px;
+
+        transition:
+            transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+            opacity 0.55s ease;
+        &:first-child {
+            transform-origin: 0% 0%;
+        }
+        &:nth-last-child(2) {
+            transform-origin: 0% 100%;
+        }
+    }
+    input:checked ~ span {
+        opacity: 1;
+        transform: rotate(45deg) translate(-2px, -1px);
+        background: #232323;
+        &:nth-last-child(3) {
+            opacity: 0;
+            transform: rotate(0deg) scale(0.2, 0.2);
+        }
+        &:nth-last-child(2) {
+            transform: rotate(-45deg) translate(0, -1px);
+        }
+    }
+    input:checked ~ ul {
+        transform: none;
+    }
+}
+#menu {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+
+    width: 100vw;
+    height: 100vh;
+
+    background: rgb(253, 255, 239);
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+
+    transform-origin: 0% 0%;
+    transform: translate(100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    li {
+        padding: 10px 0;
+        font-size: 2rem;
+        font-weight: 800;
+        a {
+            color: #452806;
+        }
+    }
+}
+
+
+
+.appear {
+    opacity: 1;
 }
