--- a/public/css/front/_pop.scss
+++ b/public/css/front/_pop.scss
@@ -1,6 +1,6 @@
 .popup {
     display: none;
-    z-index: 3;
+    z-index: 10;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -35,8 +35,10 @@
                 margin-bottom: 20px;
             }
             img {
-                max-width: 90%;
-                max-height: 90%;
+                // width: 70%;
+                // height: 70%;
+                max-width: 70%;
+                max-height: 70%;
                 width: auto;
                 height: auto;
             }
@@ -58,7 +60,7 @@
         }
     }
     .xBtn {
-        font-size: 2rem;
+        font-size: 4rem;
         color: #2c0900;
         position: fixed;
         top: 72px;
