--- a/public/css/front/_sec03.scss
+++ b/public/css/front/_sec03.scss
@@ -35,7 +35,7 @@
             background-color: rgba(70, 111, 97, 0.549);
             display: flex;
             justify-content: space-between;
-            @include xl(){
+            @include xl() {
                 height: 60%;
             }
             .activity_t {
@@ -50,13 +50,12 @@
                     padding: 16px 20px;
                     color: #fff;
                     margin-right: 10px;
-                    white-space:nowrap;
-
+                    white-space: nowrap;
                 }
                 .text {
                     font-size: 1.4rem;
                     line-height: 1.6rem;
-                    @include xl(){
+                    @include xl() {
                         width: 70%;
                     }
                 }
@@ -86,6 +85,12 @@
                             position: relative;
                             display: inline-block;
                             object-fit: contain;
+                            @include xl() {
+                                height: 80%;
+                            }
+                            @include lmd() {
+                                height: 70%;
+                            }
                         }
                     }
                     .cardL,
@@ -137,7 +142,7 @@
                 }
                 .line {
                     height: 5%;
-                    width: 55%;
+                    width: 81%;
                     border: 5px solid #452806;
                     border-radius: 15px;
                     background-image: linear-gradient(to right, #ffa4a4, #feff82, #a8ff90, #9ef0ff, #b1b8ff);
@@ -207,7 +212,7 @@
                 justify-content: center;
                 font-size: 1.4rem;
                 font-weight: 500;
-                white-space:nowrap;
+                white-space: nowrap;
             }
         }
     }
@@ -271,7 +276,7 @@
                 .text {
                     font-size: 1.4rem;
                     line-height: 1.6rem;
-                    @include xxs(){
+                    @include xxs() {
                         width: 55%;
                     }
                 }
@@ -284,17 +289,27 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                @include xs() {
+                    height: 80%;
+                }
+                @include xxs() {
+                    height: 80%;
+                }
                 .card_box {
                     height: 85%;
                     width: 90%;
                     border: 1px solid red;
                     display: flex;
                     justify-content: space-evenly;
+                    @include xs() {
+                        height: 75%;
+                    }
                     .card {
                         font-size: 1.3rem;
                         line-height: 1.4rem;
                         font-weight: 500;
                         text-align: center;
+                        margin: 0 10px;
                         img {
                             height: 90%;
                             width: 100%;
@@ -343,6 +358,9 @@
                     height: 60%;
                     width: 55%;
                     border: 1px solid red;
+                    @include xs() {
+                    height: 50%;
+                    }
                     img {
                         height: 100%;
                         width: 100%;
@@ -353,7 +371,7 @@
                 }
                 .line {
                     height: 5%;
-                    width: 55%;
+                    width: 70%;
                     border: 5px solid #452806;
                     border-radius: 15px;
                     background-image: linear-gradient(to right, #ffa4a4, #feff82, #a8ff90, #9ef0ff, #b1b8ff);
@@ -361,7 +379,7 @@
                     position: relative;
                     overflow: hidden;
                     margin: 10px 0;
-                    @include md(){
+                    @include md() {
                         width: 80%;
                     }
                     p {
