--- a/public/css/front/style.css
+++ b/public/css/front/style.css
@@ -269,7 +269,7 @@ textarea {
 
 .popup {
   display: none;
-  z-index: 3;
+  z-index: 10;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -306,8 +306,8 @@ textarea {
   margin-bottom: 20px;
 }
 .popup .popBox .info img {
-  max-width: 90%;
-  max-height: 90%;
+  max-width: 70%;
+  max-height: 70%;
   width: auto;
   height: auto;
 }
@@ -325,7 +325,7 @@ textarea {
   list-style-position: inside;
 }
 .popup .xBtn {
-  font-size: 2rem;
+  font-size: 4rem;
   color: #2c0900;
   position: fixed;
   top: 72px;
@@ -334,7 +334,7 @@ textarea {
 }
 
 .slideBarL {
-  opacity: 1;
+  opacity: 0;
   position: fixed;
   bottom: 50%;
   left: 2%;
@@ -360,6 +360,9 @@ textarea {
   background: #94c700;
   -webkit-clip-path: polygon(100% 0, 0 50%, 100% 100%);
           clip-path: polygon(100% 0, 0 50%, 100% 100%);
+}
+.slideBarL .button .rotate {
+  transform: rotate(180deg); /* 旋转180度 */
 }
 .slideBarL .menu {
   width: 100%;
@@ -423,11 +426,8 @@ textarea {
   animation-delay: 1.5s;
 }
 
-.appear {
-  opacity: 1;
-}
-
 .slideBarR {
+  opacity: 0;
   position: fixed;
   bottom: 50%;
   right: 0px;
@@ -516,12 +516,12 @@ textarea {
 }
 
 .slideBarDown {
+  opacity: 0;
   display: none;
   position: fixed;
   bottom: 0px;
   right: 0px;
   transform: translate(0%, 0%);
-  background-color: #ffb72a;
   width: 100%;
   height: 11%;
   z-index: 2;
@@ -535,7 +535,7 @@ textarea {
   background: url(/img/front/slideBarDown.png);
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: left;
+  background-position: center;
   position: relative;
   height: 100%;
   width: 100%;
@@ -561,6 +561,11 @@ textarea {
   max-width: 100px;
   max-height: 94px;
   border: 1px solid red;
+}
+@media all and (max-width: 375px) {
+  .slideBarDown .bg .empty {
+    width: 26%;
+  }
 }
 .slideBarDown .bg .google {
   background: url(/img/front/google.png);
@@ -599,6 +604,105 @@ textarea {
   width: 15%;
   max-width: 94px;
   max-height: 94px;
+}
+
+#menuToggle {
+  display: none;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 5;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+       user-select: none;
+}
+@media all and (max-width: 900px) {
+  #menuToggle {
+    display: block;
+  }
+}
+#menuToggle a {
+  text-decoration: none;
+  color: #232323;
+  transition: color 0.3s ease;
+}
+#menuToggle a:hover {
+  color: tomato;
+}
+#menuToggle input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  -webkit-touch-callout: none;
+}
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #452806;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+#menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+#menuToggle input:checked ~ ul {
+  transform: none;
+}
+
+#menu {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  width: 100vw;
+  height: 100vh;
+  background: rgb(253, 255, 239);
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#menu li {
+  padding: 10px 0;
+  font-size: 2rem;
+  font-weight: 800;
+}
+#menu li a {
+  color: #452806;
+}
+
+.appear {
+  opacity: 1;
 }
 
 html {
@@ -662,7 +766,6 @@ body {
 }
 
 .container {
-  background-color: rgba(255, 255, 255, 0.4431372549);
   position: relative;
   width: 100%;
   height: 100vh;
@@ -676,6 +779,11 @@ body {
   height: 950px;
   background-size: cover;
   scroll-snap-align: center;
+}
+@media all and (max-width: 375px) {
+  .section {
+    height: 750px;
+  }
 }
 .section.section1 {
   background: url(/img/front/sec01BgPC.jpg);
@@ -1261,6 +1369,16 @@ body {
   -o-object-fit: contain;
      object-fit: contain;
 }
+@media all and (max-width: 1440px) {
+  .section3 .sec_box .sec3_box2 .sec3_boxL .card_box .card img {
+    height: 80%;
+  }
+}
+@media all and (max-width: 960px) {
+  .section3 .sec_box .sec3_box2 .sec3_boxL .card_box .card img {
+    height: 70%;
+  }
+}
 .section3 .sec_box .sec3_box2 .sec3_boxL .card_box .cardL p,
 .section3 .sec_box .sec3_box2 .sec3_boxL .card_box .cardL span,
 .section3 .sec_box .sec3_box2 .sec3_boxL .card_box .cardR p,
@@ -1299,7 +1417,7 @@ body {
 }
 .section3 .sec_box .sec3_box2 .sec3_boxR .line {
   height: 5%;
-  width: 55%;
+  width: 81%;
   border: 5px solid #452806;
   border-radius: 15px;
   background-image: linear-gradient(to right, #ffa4a4, #feff82, #a8ff90, #9ef0ff, #b1b8ff);
@@ -1458,6 +1576,18 @@ body {
   flex-direction: column;
   align-items: center;
 }
+@media all and (max-width: 500px) {
+  .section31 .sec_box .sec3_box2 .sec3_boxL,
+  .section32 .sec_box .sec3_box2 .sec3_boxL {
+    height: 80%;
+  }
+}
+@media all and (max-width: 375px) {
+  .section31 .sec_box .sec3_box2 .sec3_boxL,
+  .section32 .sec_box .sec3_box2 .sec3_boxL {
+    height: 80%;
+  }
+}
 .section31 .sec_box .sec3_box2 .sec3_boxL .card_box,
 .section32 .sec_box .sec3_box2 .sec3_boxL .card_box {
   height: 85%;
@@ -1466,12 +1596,19 @@ body {
   display: flex;
   justify-content: space-evenly;
 }
+@media all and (max-width: 500px) {
+  .section31 .sec_box .sec3_box2 .sec3_boxL .card_box,
+  .section32 .sec_box .sec3_box2 .sec3_boxL .card_box {
+    height: 75%;
+  }
+}
 .section31 .sec_box .sec3_box2 .sec3_boxL .card_box .card,
 .section32 .sec_box .sec3_box2 .sec3_boxL .card_box .card {
   font-size: 1.3rem;
   line-height: 1.4rem;
   font-weight: 500;
   text-align: center;
+  margin: 0 10px;
 }
 .section31 .sec_box .sec3_box2 .sec3_boxL .card_box .card img,
 .section32 .sec_box .sec3_box2 .sec3_boxL .card_box .card img {
@@ -1521,6 +1658,12 @@ body {
   width: 55%;
   border: 1px solid red;
 }
+@media all and (max-width: 500px) {
+  .section31 .sec_box .sec3_box2 .sec3_boxR .bowl,
+  .section32 .sec_box .sec3_box2 .sec3_boxR .bowl {
+    height: 50%;
+  }
+}
 .section31 .sec_box .sec3_box2 .sec3_boxR .bowl img,
 .section32 .sec_box .sec3_box2 .sec3_boxR .bowl img {
   height: 100%;
@@ -1533,7 +1676,7 @@ body {
 .section31 .sec_box .sec3_box2 .sec3_boxR .line,
 .section32 .sec_box .sec3_box2 .sec3_boxR .line {
   height: 5%;
-  width: 55%;
+  width: 70%;
   border: 5px solid #452806;
   border-radius: 15px;
   background-image: linear-gradient(to right, #ffa4a4, #feff82, #a8ff90, #9ef0ff, #b1b8ff);
@@ -1860,6 +2003,17 @@ body {
   width: 50%;
   height: 80%;
   background-color: rgba(83, 106, 98, 0.549);
+}
+@media all and (max-width: 1775px) {
+  .section5 .sec_box .sec5_box2 {
+    height: 60%;
+  }
+}
+@media all and (max-width: 1024px) {
+  .section5 .sec_box .sec5_box2 {
+    height: 50%;
+    width: 60%;
+  }
 }
 @media all and (max-width: 900px) {
   .section5 .sec_box .sec5_box2 {
