--- a/public/css/front/_sec03.scss
+++ b/public/css/front/_sec03.scss
@@ -17,10 +17,14 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
+
+        @include xl{
+            justify-content: space-evenly;
+        }
         .sec3_box1 {
             width: 50%;
             height: 18%;
-            background-color: rgba(116, 146, 136, 0.549);
+            // background-color: rgba(116, 146, 136, 0.549);
             img {
                 position: relative;
                 display: inline-block;
@@ -38,6 +42,9 @@
             @include xl() {
                 height: 60%;
             }
+            // @include lmd() {
+            //     height: 40%;
+            // }
             .activity_t {
                 margin: 12px;
                 display: flex;
@@ -70,7 +77,7 @@
                 align-items: center;
                 .card_box {
                     height: 85%;
-                    width: 90%;
+                    width: 95%;
                     border: 1px solid red;
                     display: flex;
                     justify-content: space-evenly;
@@ -79,6 +86,7 @@
                         line-height: 1.4rem;
                         font-weight: 500;
                         text-align: center;
+                        margin: 0 10px;
                         img {
                             height: 90%;
                             width: 100%;
@@ -153,7 +161,7 @@
                     p {
                         position: absolute;
                         left: 50%;
-                        top: 10%;
+                        line-height: 1rem;
                         z-index: 2;
                     }
                 }
@@ -161,7 +169,7 @@
                     background-color: #fff;
                     height: 100%;
                     width: 100%;
-                    transform: translate(0%);
+                    // transform: translate(0%);
                 }
                 .addMeatBox {
                     width: 100%;
@@ -385,7 +393,7 @@
                     p {
                         position: absolute;
                         left: 50%;
-                        top: 10%;
+                        line-height: 1.5rem;
                         z-index: 1;
                     }
                 }
@@ -393,7 +401,7 @@
                     background-color: #fff;
                     height: 100%;
                     width: 100%;
-                    transform: translate(90%);
+                    // transform: translate(0%);
                 }
                 .addMeatBox {
                     width: 100%;
